[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = "0.11"
dotenv = "0.15"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde_json = "1"
serde = "*"
snailquote = "0.3.1"

[toolchain]
channel = "nightly"
